--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   smooth_page_indicator: ^1.1.0
   get: ^4.6.6
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -42,7 +43,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/splash/
-
+    - assets/images/onboarding/
 
   # fonts:
   #   - family: Schyler
