--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   get: ^4.6.6
   carousel_slider: ^4.2.1
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
