--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   get: ^4.6.6
   carousel_slider: ^4.2.1
   flutter_svg: ^2.0.10+1
+  flutter_otp_text_field: ^1.1.3+2
 
 dev_dependencies:
   flutter_test:
