--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
     - assets/images/onboarding/
     - assets/images/login/
     - assets/images/forget_password/
+    - assets/images/dashboard/
     - assets/logo/
 
   # fonts:
