--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_svg: ^2.0.10+1
   flutter_otp_text_field: ^1.1.3+2
+  firebase_core: ^3.1.1
 
 dev_dependencies:
   flutter_test:
