--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_otp_text_field: ^1.1.3+2
   firebase_core: ^3.1.1
+  firebase_auth: ^5.1.2
 
 dev_dependencies:
   flutter_test:
