--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_otp_text_field: ^1.1.3+2
   firebase_core: ^3.1.1
   firebase_auth: ^5.1.2
+  line_awesome_flutter: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,7 @@ flutter:
     - assets/images/login/
     - assets/images/forget_password/
     - assets/images/dashboard/
+    - assets/images/profile/
     - assets/logo/
 
   # fonts:
